--- a/test_rnn.ipynb
+++ b/test_rnn.ipynb
@@ -49,29 +49,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variable containing:\n",
+      " 0.0467  0.8529  0.2432\n",
+      " 0.5245  0.1684  0.5820\n",
+      "[torch.FloatTensor of size 2x3]\n",
+      "\n",
+      "Variable containing:\n",
+      " 0.9233  0.6396  0.7355\n",
+      " 0.4312  0.9573  0.3890\n",
+      "[torch.FloatTensor of size 2x3]\n",
+      "\n",
+      "Variable containing:\n",
+      " 1.7246\n",
+      "[torch.FloatTensor of size 1]\n",
+      "\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "\n",
-       " 0.4269  0.2858  0.0225\n",
-       " 0.8391  0.4201  0.0365\n",
-       "[torch.FloatTensor of size 2x3]"
+       "Variable containing:\n",
+       " 1.7246\n",
+       "[torch.FloatTensor of size 1]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a1 = torch.rand(2,1,3)\n",
-    "a2 = torch.rand(2,1,3)\n",
-    "torch.cat([a1], 1).squeeze(1)"
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from torch.autograd import Variable\n",
+    "loss_fn = torch.nn.MSELoss(size_average=False)\n",
+    "a = Variable(torch.rand(2,3))\n",
+    "b = Variable(torch.rand(2,3))\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(((a - b)**2).sum())\n",
+    "loss_fn(a, b)"
    ]
   },
   {
